feat: add new improvements based on the latest code review.

--- a/RapidPayAPI/appsettings.Development.json
+++ b/RapidPayAPI/appsettings.Development.json
@@ -3,12 +3,13 @@
     "RapidPayAPIDb": "Server=localhost;Database=RapidPayAPI;Integrated Security=True;TrustServerCertificate=True;"
   },
   "AppSettings": {
-    "EncryptionKey": "@Encryption!Key@"
+    "Workfactor": 10
   },
   "JwtSettings": {
     "SecretKey": "2b8acd46-b026-41be-87b5-9a5d2d4ed595",
     "Issuer": "your_issuer",
-    "Audience": "your_audience"
+    "Audience": "your_audience",
+    "AddHourToExpireToken": 1
   },
   "Logging": {
     "LogLevel": {
